--- a/advisor/templates/advisor/advisee.html
+++ b/advisor/templates/advisor/advisee.html
@@ -80,8 +80,16 @@
 
 </div>
 
+
+
+
+{% comment%}
+<!--table for the courses in major-->
+{% endcomment %}
+
 {% if advisee_courses %}
 <table class="record_tables">
+    <caption>First Major</caption>
     <tr>
         <th>Course</th>
         <th>Grade</th>
