Clean up views and add comments

--- a/advisor/templates/advisor/advisor_record.html
+++ b/advisor/templates/advisor/advisor_record.html
@@ -15,9 +15,9 @@
         Advisor
     </th>
 
-    <tr>{% if advisor in advisee_list %}      
+    <tr>{% if advisor %}      
             <td>
-                {{ advisor.advisor }}
+                {{ advisor.advisor.first_name }} {{ advisor.advisor.last_name }}
             </td>
         {% else %}
             <td>
