--- a/advisor/templates/base.html
+++ b/advisor/templates/base.html
@@ -22,7 +22,9 @@
         <a href="" id="" > <img class="nav_logo" src="{% static 'images/MilliganBuffalo.jpg' %}"/></a>
             
             <a class="topnav-right" href="">About</a>
+            {% comment %}<!--will be used to display certain courses-->
             <a class="topnav-right" href="{% url 'advisor:courses' %}">Courses</a>
+            {% endcomment %}
             <a class="topnav-right" href="{% url 'advisor:advisee_list' %}">Advisees</a>
             <a class="topnav-right" href="{% url 'advisor:advisors' %}">Advisors</a>
             <a class="topnav-right" href="{% url 'advisor:index' %}">Home</a>
