--- a/advisor/templates/advisor/advisee_list.html
+++ b/advisor/templates/advisor/advisee_list.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+{% if user.is_authenticated %}
 
 <table class="record_tables">
     <tr>
@@ -37,6 +38,14 @@
 
 </div>
 
-
+{% else %}
+        <div>
+            <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
+        </div>
+        <p>You must log in to view this page.</p>
+        <form class="" action="{% url 'login' %}">
+            <input class="login_btn" type="submit" value="Log in" />
+        </form>
+{% endif %}
 
 {% endblock %}
