--- a/advisor/templates/advisor/index.html
+++ b/advisor/templates/advisor/index.html
@@ -5,31 +5,43 @@
 
 {% block content %}
 
-<div>
-    <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
-</div>
+    {% if user.is_authenticated %}
 
-    <table class="advisors_table">
-        <tr>
-            <th>Advisors</th>
-        </tr>
-        {% if advisors %}
-            {% for advisor in advisors %}
+        <div>
+            <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
+        </div>
+
+            <table class="advisors_table">
                 <tr>
-                    <td>
-                        <a href="{% url 'advisor:advisor_record' advisor.id %}" >{{ advisor }} </a>   
-                    </td>
+                    <th>Advisors</th>
                 </tr>
-            {% endfor %}
-        
-        {% else %}
-            <tr>
-                <td>
-                    No advisors to show.    
-                </td>
-            </tr>
-        {% endif %}
-    </table>
+                {% if advisors %}
+                    {% for advisor in advisors %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'advisor:advisor_record' advisor.id %}" >{{ advisor }} </a>   
+                            </td>
+                        </tr>
+                    {% endfor %}
+                
+                {% else %}
+                    <tr>
+                        <td>
+                            No advisors to show.    
+                        </td>
+                    </tr>
+                {% endif %}
+            </table>
+
+    {% else %}
+        <div>
+            <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
+        </div>
+        <p>You must log in to view this page.</p>
+        <form class="" action="{% url 'login' %}">
+            <input class="login_btn" type="submit" value="Log in" />
+        </form>
+    {% endif %}   
 
 
     {% endblock %}
