--- a/advisor/static/advisor/advisor_layout.css
+++ b/advisor/static/advisor/advisor_layout.css
@@ -80,3 +80,38 @@ nav.topnav {
 #student_name {
     padding-top: 50px;
 }
+
+form.notes {
+    width:100%;
+    height:450px;
+    margin:auto;
+    position:relative;
+}
+
+form.planning {
+    width:100%;
+    height:250px;
+    margin:auto;
+    position:relative;
+}
+
+input {
+    width:100%;
+    height: 25px;
+}
+
+nav#bar {
+    font-size: 18px;
+    color: black;
+}
+
+.login_btn {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    color: black;
+    background-color: lightgray;
+    cursor:pointer;
+    border-radius: 5px;
+    text-align: center;
+}
