--- a/advisor/templates/advisor/advisor_record.html
+++ b/advisor/templates/advisor/advisor_record.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-
+{% if user.is_authenticated %}
 
 
 
@@ -62,4 +62,14 @@
 </body>
 
 </html>
+{% else %}
+        <div>
+            <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
+        </div>
+        <p>You must log in to view this page.</p>
+        <form class="" action="{% url 'login' %}">
+            <input class="login_btn" type="submit" value="Log in" />
+        </form>
+    {% endif %}
+
 {% endblock %}
