--- a/advisor/templates/advisor/advisors.html
+++ b/advisor/templates/advisor/advisors.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-
+{% if user.is_authenticated %}
 
 
     <table class="advisors_table">
@@ -30,6 +30,15 @@
         {% endif %}
     </table>
     
+{% else %}
+    <div>
+        <img  id="academic_excellence" src="{% static 'images/MilliganCollege.png' %}"/>
+    </div>
+    <p>You must log in to view this page.</p>
+    <form class="" action="{% url 'login' %}">
+        <input class="login_btn" type="submit" value="Log in" />
+    </form>
+{% endif %}
 
 {% endblock %}
 
