Add CSS to login and logout authentication on static pages

--- a/advisor/templates/advisor/advisee.html
+++ b/advisor/templates/advisor/advisee.html
@@ -333,7 +333,7 @@
     </div>
     <p>You must log in to view this page.</p>
     <form class="" action="{% url 'login' %}">
-        <input class="login_btn" type="submit" value="Log in" />
+        <input class="login_btn" type="submit" value="LOG IN" />
     </form>
 {% endif %}
 
