--- a/advisor/static/advisor/advisor_layout.css
+++ b/advisor/static/advisor/advisor_layout.css
@@ -96,8 +96,10 @@ form.planning {
 }
 
 input {
-    width:100%;
-    height: 25px;
+    width:99%;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
 nav#bar {
@@ -106,12 +108,26 @@ nav#bar {
 }
 
 .login_btn {
-    width: 200px;
+    width: 100%;
     height: 40px;
     font-size: 20px;
-    color: black;
-    background-color: lightgray;
+    color: white;
+    background-color: rgb(234,113,37);
     cursor:pointer;
     border-radius: 5px;
     text-align: center;
+}
+
+.login {
+    width: 30%;
+    opacity: 1;
+    background-color: lightgray;
+    color: black;
+    border-radius: 5px;
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
 }
