--- a/advisor/templates/advisor/advisee_list.html
+++ b/advisor/templates/advisor/advisee_list.html
@@ -44,7 +44,7 @@
         </div>
         <p>You must log in to view this page.</p>
         <form class="" action="{% url 'login' %}">
-            <input class="login_btn" type="submit" value="Log in" />
+            <input class="login_btn" type="submit" value="LOG IN" />
         </form>
 {% endif %}
 
