--- a/advisor/templates/advisor/advisors.html
+++ b/advisor/templates/advisor/advisors.html
@@ -36,7 +36,7 @@
     </div>
     <p>You must log in to view this page.</p>
     <form class="" action="{% url 'login' %}">
-        <input class="login_btn" type="submit" value="Log in" />
+        <input class="login_btn" type="submit" value="LOG IN" />
     </form>
 {% endif %}
 
