--- a/advisor/templates/base.html
+++ b/advisor/templates/base.html
@@ -20,7 +20,8 @@
     
         <nav class="topnav" id="myTopnav">
             <a href="" id="" > <img class="nav_logo" src="{% static 'images/MilliganBuffalo.jpg' %}"/></a>
-            {% if user.is_authenticated %}    
+            {% if user.is_authenticated %}
+                <a class="topnav-right" href="{% url 'password_reset' %}" target="blank">Reset Password</a>    
                 <a class="topnav-right" href="{% url 'admin:index' %}" target="blank">Admin</a>
                 <a class="topnav-right" href="{% url 'logout' %}">Log out</a>
             {% else %}
