Add logic for including developmental courses in GPA, but not in hours needed for graduation

--- a/advisor/static/advisor/advisor_layout.css
+++ b/advisor/static/advisor/advisor_layout.css
@@ -96,7 +96,7 @@ form.planning {
 }
 
 input {
-    width:100%;
+    width:99%;
     height: 30px;
     border-radius: 5px;
     font-size: 16px;
@@ -130,4 +130,9 @@ nav#bar {
 
 p {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.footnote {
+    font-size: 14px;
+    text-align: center;
 }
