--- a/advisor/templates/advisor/advisee.html
+++ b/advisor/templates/advisor/advisee.html
@@ -316,15 +316,19 @@
     <table class="record_tables">
         <tr>
             <th>
-                Total Hours
+                Total Hours*
             </th>
+
         </tr>
         <tr>
             <td class="center_data">{{ total_credits }}</td>
         </tr>
     </table>
+    <p class="footnote"><strong>*</strong> Developmental courses with course numbers less than 100 are not
+                                            included in the 128 hours needed for graduation, 
+                                            but they are included in GPA. </p>
 
-    <br><br><br>
+    <br>
 
 
     <h2>Notes</h2>
